--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <!-- ==========  ========== -->
-    <div id="content" class="hidden">
+    <div id="content">
       <header class="header" id="header">
         <div class="header-brand">
           <img
@@ -61,7 +61,7 @@
               </p>
               <p class="contact-item">
                 <a
-                  href="https://linkedin.com/in/matiasromoli"
+                  href="https://www.linkedin.com/in/matias-r%C3%B3moli-369a722a8/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -87,8 +87,11 @@
               <h2 class="section-title">Sobre mí</h2>
               <p class="about-text">
                 Técnico Superior en Periodismo Deportivo y estudiante de la
-                Licenciatura en Comunicación Social (UNLP). Coberturas
-                periodísticas, redacción y radio. Diseño y programación.
+                Licenciatura en Comunicación Social (UNLP). Experiencia en
+                medios radiales y digitales. Apasionado por el básquet.
+                Actualmente en Diagonal Al Aro, medio especializado en la
+                cobertura del básquet platense. Experiencia en redacción
+                periodística, gestión de redes sociales y programación.
               </p>
             </div>
           </section>
@@ -184,10 +187,7 @@
             <div class="second-card-container">
               <div class="second-card-title">
                 <h2>Entrevistas</h2>
-                <p>
-                  Realizadas para Diagonal Al Aro y la columna de básquet en FM
-                  Raíces Rock.
-                </p>
+                <p>Realizadas para Diagonal Al Aro y FM Raíces Rock.</p>
               </div>
 
               <div class="second-card-body">
@@ -201,8 +201,8 @@
                   >
                     <div class="second-img">
                       <img
-                        src="./public/lucas-conti.png"
-                        alt="Logo Estudiantes de La Plata"
+                        src="./public/Conti.png"
+                        alt="Lucas Conti. Técnico de Estudiantes."
                         loading="lazy"
                       />
                     </div>
@@ -216,7 +216,7 @@
                 <!-- Entrevista 2 -->
                 <div class="second-card">
                   <a
-                    href="https://www.youtube.com/watch?v=BWvlUROwv54&t=12s"
+                    href="https://www.youtube.com/watch?v=Av5DINJp9-A&list=PLE2Kd7kc3Ofvcz18yXzWaLZSCIEgKDPI1"
                     rel="noopener noreferrer"
                     class="card-container"
                     target="_blank"
@@ -234,6 +234,97 @@
                     </div>
                   </a>
                 </div>
+
+                <!-- Entrevista 3 -->
+                <div class="second-card">
+                  <a
+                    href="https://www.youtube.com/watch?v=6PDZVVLqtOw"
+                    rel="noopener noreferrer"
+                    class="card-container"
+                    target="_blank"
+                  >
+                    <div class="second-img">
+                      <img
+                        src="./public/Rivarola.png"
+                        alt="Franco Rivarola. Técnico de Atenas."
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="second-title">
+                      <h3>Franco Rivarola</h3>
+                      <p>Entrenador de Atenas.</p>
+                    </div>
+                  </a>
+                </div>
+
+                <!-- Entrevista 4 -->
+                <div class="second-card hidden">
+                  <a
+                    href="https://www.youtube.com/watch?v=8ygSVZ1U3Dg&t"
+                    rel="noopener noreferrer"
+                    class="card-container"
+                    target="_blank"
+                  >
+                    <div class="second-img">
+                      <img
+                        src="./public/Mitidieri.png"
+                        alt="Santino Mitidieri. Jugador de Reconquista."
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="second-title">
+                      <h3>Santino Mitidieri</h3>
+                      <p>Jugador de Reconquista.</p>
+                    </div>
+                  </a>
+                </div>
+
+                <!-- Entrevista 5 -->
+                <div class="second-card hidden">
+                  <a
+                    href="https://www.youtube.com/watch?v=z55S4wF0Upw"
+                    rel="noopener noreferrer"
+                    class="card-container"
+                    target="_blank"
+                  >
+                    <div class="second-img">
+                      <img
+                        src="./public/Ronconi.png"
+                        alt="Franco Ronconi. Jugador de Universal."
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="second-title">
+                      <h3>Franco Ronconi</h3>
+                      <p>Jugador de Universal.</p>
+                    </div>
+                  </a>
+                </div>
+
+                <!-- Entrevista 6 -->
+                <div class="second-card hidden">
+                  <a
+                    href="https://www.youtube.com/watch?v=X6w5wBtonm0&t"
+                    rel="noopener noreferrer"
+                    class="card-container"
+                    target="_blank"
+                  >
+                    <div class="second-img">
+                      <img
+                        src="./public/Diaz.png"
+                        alt="Nicolas Diaz. Jugador de Meridiano V."
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="second-title">
+                      <h3>Nicolas Diaz</h3>
+                      <p>Jugador de Meridiano V.</p>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="ver-mas-container">
+                <button class="btn" id="btn">Ver más</button>
               </div>
             </div>
           </section>
@@ -248,7 +339,7 @@
                 ><i data-lucide="mail"></i
               ></a>
               <a
-                href="https://linkedin.com/in/matiasromoli"
+                href="https://www.linkedin.com/in/matias-r%C3%B3moli-369a722a8/"
                 target="_blank"
                 rel="noopener noreferrer"
                 ><i data-lucide="linkedin"></i
@@ -266,6 +357,7 @@
     </div>
 
     <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="./src/js/index.js"></script>
     <script>
       lucide.createIcons();
     </script>
