--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 
     <link rel="stylesheet" href="./src/styles/styles.css" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -50,12 +55,12 @@
 
             <div class="contact-info">
               <p class="contact-item">
-                <i data-lucide="map-pin"></i>
+                <i data-lucide="map-pin-house"></i>
                 <span>La Plata, Argentina</span>
               </p>
               <p class="contact-item">
                 <a href="mailto:matiasromoli22@gmail.com">
-                  <i data-lucide="mail"></i>
+                  <i data-lucide="mail-plus"></i>
                   <span>matiasromoli22@gmail.com</span>
                 </a>
               </p>
@@ -102,7 +107,7 @@
             <!-- Card 1 -->
             <div class="experience-card">
               <div class="experience-image">
-                <i data-lucide="edit-3"></i>
+                <i data-lucide="file-text"></i>
               </div>
               <div class="experience-data">
                 <div class="data-container">
@@ -121,7 +126,7 @@
             <!-- Card 2 -->
             <div class="experience-card">
               <div class="experience-image">
-                <i data-lucide="radio"></i>
+                <i data-lucide="mic"></i>
               </div>
               <div class="experience-data">
                 <div class="data-container">
@@ -139,7 +144,7 @@
             <!-- Card 3 -->
             <div class="experience-card">
               <div class="experience-image">
-                <i data-lucide="tv"></i>
+                <i data-lucide="video"></i>
               </div>
               <div class="experience-data">
                 <div class="data-container">
@@ -333,24 +338,7 @@
         <!-- ==========  ========== -->
         <footer class="footer">
           <div class="footer-content">
-            <p>© 2025 Matías Rómoli — Todos los derechos reservados</p>
-            <div class="footer-links">
-              <a href="mailto:matiasromoli22@gmail.com"
-                ><i data-lucide="mail"></i
-              ></a>
-              <a
-                href="https://www.linkedin.com/in/matias-r%C3%B3moli-369a722a8/"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><i data-lucide="linkedin"></i
-              ></a>
-              <a
-                href="https://github.com/matiasromoli"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><i data-lucide="github"></i
-              ></a>
-            </div>
+            <p>© 2025 — Todos los derechos reservados</p>
           </div>
         </footer>
       </section>
